<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="0dp"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fileSize"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fileLength"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_downloading"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/downloading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fileDownloading"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/rate_notice"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp" >
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_start" />

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_reset" />

    </LinearLayout>
    
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:layout_marginTop="5dp"
	    	android:id="@+id/scrollView">	

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_show_log"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_weight="45.30"
            android:text="@string/label_tmp_show_log"
            android:textColor="@android:color/white" />

    </LinearLayout>
	    	
	    </ScrollView>
</LinearLayout>